# futbol-tesis

./: .gitignore  README.md  pyproject.toml
notebooks/: discretize.ipynb  experiments.ipynb  generate_candidates.ipynb  preprocess.ipynb
