[tool.poetry]
name = "futbol-tesis"
version = "0.1.0"
description = ""
authors = ["Francisco Mejía <fmejiaantezano@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.8,<3.12"
numpy = "^1.23.0"
pandas = "^1.4.3"
sklearn = "^0.0"
seaborn = "^0.11.2"
ipykernel = "^6.15.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
